Rename:      -(Solution) GenericsToList -> DataStructure;      -ListClass -> ArrayList;      -ListTest -> ArrayList;

--- a/TestList/Test.csproj
+++ b/TestList/Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GenericsToList\GenericsToList.csproj" />
+    <ProjectReference Include="..\DataStructure\DataStructure.csproj" />
   </ItemGroup>
 
 </Project>
